# support_bot

./: .env  loader.py  pyproject.toml  runbot.py
common/: config.py  set_bot_commands.py  settings.py  variables.py
handlers/: __init__.py  main_handlers.py  start.py  support.py  support_call.py
keyboards/inline/: support.py
middlewares/: __init__.py  support_middleware.py
